--- a/tmux.conf
+++ b/tmux.conf
@@ -19,3 +19,4 @@ bind r source-file ~/.tmux.conf
 # Enable mouse mode (tmux 2.1 and above)
 # set -g mouse on
 
+set -g default-terminal "screen-256color"
